@@ -1,6 +1,9 @@
 
-V8.01 (xx.xx.2023)
+V8.xx (xx.xx.2023)
  -new "cell2"-variation by Brad Stefanov (was already included in 8.00 but did not make it into the release notes)
+ -fixed a bug in the math library which causes some variations to fail which used trigonometric functions with large
+  arguments (e.g. "phoenix_julia")
+ -added a check for path-settings which contain space-characters and display a warning in this case
  -removed the parameters "X" and "Y" of "circleLinear" which were never used
 
 V8.00 (19.02.2023)
